style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: SF Pro Text, SF Pro Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
    color: rgb(246, 241, 196);
}

body {
    min-height: 100vh;
    margin: 0;
    display: grid;
    grid-template-rows: 1fr 500px 600px 500px;
    background-color: rgb(0, 7, 3);
}



.main-page {
    display: grid;
}

.Main-page__bg-video {
    display: grid;

}

.Main__bg-video {
    display: block;
    width: 100%;
    z-index: -1;
    margin: auto;
}

.header {
    display: grid;
    grid-auto-flow: column;
    z-index: 0;
    position: absolute;
    justify-items: center;
    width: 100%;

}

.Main-page__logo {
    width: 80px;
}

.header__profile-icon,
.header__list {
    display: grid;
    place-items: center;

}

ul {
    list-style: none;
    font-size: 20px;

}

li {
    display: inline-block;
    padding-right: 35px;
}

.user-icon {
    width: 30px;
}

.Main-page__text {
    display: grid;
    grid-auto-flow: row;
    z-index: 0;
    padding: 20%;
    position: absolute;
    place-items: center;
}

h1 {
    font-size: 45px;
    padding: 10px;
    color: rgb(255, 247, 174);
}

.Events {
    display: grid;
    align-items: center;
    place-content: center;

}

.Events__slides {
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    justify-items: center;
    background-color: rgb(5, 14, 3);
    ;
}

.event__image {
    width: 600px;
    border-left: 13px solid black;
    height: auto;
    object-fit: cover;
    justify-content: center;
}

.Event__text {
    display: grid;
    justify-content: center;
    place-items: center;
}

.Event__register {
    color: rgb(0, 7, 3);
    font-size: medium;
    background-color: rgb(255, 247, 174);
    width: 100px;
    padding: 5px;
    margin-bottom: 15px;
}

p {
    width: 250px;
    justify-content: center;
    padding-top: 20px;
    padding-bottom: 20px;
}

.movie-collection__bg-image {
    display: block;
    width: 100%;
    z-index: -1;
    margin: auto;
    object-fit: fill;

}

.Movie-collection__list {
    display: grid;
    grid-auto-flow: column;
    z-index: 0;
    position: absolute;
    justify-items: left;
    margin: 75px;
    width: 100%;
}

.Movie-collection__list li {
    padding-top: 30px;
}

.Movie-collection__list a {
    text-decoration: none;
    color: rgb(255, 247, 174);
}

.Movie-collection__title {
    color: rgb(255, 247, 174);
    font-size: 25px;
    position: absolute;
    left: 40%;
    margin-top: 20px;
}

.poster {
    width: 100px;
    padding: 10px;
}

.collection__poster {
    display: none;
    transition: 2s;
}

.display-checkbox__two,
.display-checkbox:checked~.collection__poster {
    display: grid;
    grid-auto-flow: row;
    width: fit-content;
    padding: 10px;
    grid-gap: 20px;
    position: absolute;
    z-index: 0;
    left:-60px;
    top: 70px;
    place-items: center;
    background-color: #79564f5e;
}

.display-checkbox {
    appearance: none;
}

.display-checkbox::before {
    content: "Recommended";
    font-size: 25px;
    color: rgb(255, 247, 174);
    padding: 5px;
    background-color: #79564f5e;
}

.collection__poster__title {
    color: rgb(255, 247, 174);
    font-size: 15px;
}

.recommended {
    position: absolute;
    z-index: 0;
    left:40%;
    margin-top: 15%;
}
.poster__list{
    display: grid;
    grid-auto-flow: column;
}

.About-us__bg-img{
display: block;
}

.About-us {
    border-top: 20px solid rgb(0, 7, 3);
    background-color: rgb(0, 10, 5);;
    display: grid;
    grid-auto-flow: column;
    justify-content: center;
    grid-gap: 40px;
    place-items: center;
    color: rgb(255, 247, 174);
}

.About-us h2{
    color: rgb(255, 245, 152);  
}

.About-us p{
    color: rgb(255, 247, 174);  
}

.social-media-icons{
    width: 40px;
    padding:10px;
}

